<resources>
    <string name="app_name">LoginView</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="powered_by">Powered by</string>
    <string name="no_of_attempts_remaining_3">No. of attempts remaining: 3</string>
    <string name="morselogo">morseLogo</string>
    <string name="redditlogo">redditLogo</string>
</resources>